@@ -1,14 +1,0 @@
-[Desktop Entry]
-Name=GRAMPS genealogical database
-Name[no]=GRAMPS
-Name[nb]=GRAMPS
-Comment=Manage your family tree
-Comment[no]=Et slektsforskningsprogram
-Comment[nb]=Et slektsforskningsprogram
-Exec=gramps
-Terminal=false
-Type=Application
-Icon=gramps.png
-Categories=Application;Genealogy;
-StartupNotify=true
-X-GNOME-DocPath=gramps/gramps-manual.xml
